# EvoTaxo

./: .gitignore  INSTALLATION.md  README.md  build_dataset.py  evaluate.py  main.py  notes.md  pyproject.toml  run_claimtaxo.sh  run_naloxone_taxonomy.sh  temporal_clustering_analysis.py  test_api.py  test_openrouter_api.py
claimtaxo/: README.md  SPEC.md  __init__.py  action_schema.py  apply_ops.py  bootstrap.py  cluster.py  clustering.py  config.py  data.py  embeddings.py  io.py  io_sinks.py  llm.py  llm_json.py  llm_ops.py  mapping.py  pipeline.py  projection.py  prompts.py  propose_llm.py  review_llm.py  review_loop.py  stance.py  taxonomy.py  taxonomy_ops.py  utils.py  visualize.py
data/: 1_build_ice_text_dataset.py  1_build_opiates_text_dataset.py  2_score_zero_shot_bart_mnli.py  3_filter_by_label_thresholds.py  collect_reddit_data.ipynb  opiates_claimtaxo_input_5labels_ge0.75_summary.json  opiates_claimtaxo_input_5labels_ge0.7_summary.json  opiates_claimtaxo_input_5labels_ge0.8_summary.json  sample_500.csv  temporal_clustering_analysis.py
evotaxo/: SPEC.md  __init__.py  action_schema.py  apply_ops.py  config.py  data.py  embeddings.py  io_sinks.py  llm.py  llm_json.py  mapping.py  pipeline.py  projection.py  prompts.py  propose_llm.py  review_llm.py  review_loop.py  taxonomy.py  utils.py
metrics/: __init__.py  common.py  csc.py  llm_client.py  nliv.py  path_granularity.py  post_leaf_confidence.py  sibling_coherence.py  sibling_separability.py
taxoadapt-copy/: README_NALOXONE.md  expansion.py  json_utils.py  main.py  model_definitions.py  prompts.py  utils.py
taxoadapt-copy/datasets/naloxone_reddit/: final_taxonomy.json  final_taxonomy.txt  initial_taxo.txt  internal.txt  statistics.json
visualizations/: README.md
