[project]
name = "claimtaxo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hdbscan>=0.8.41",
    "ipykernel>=7.1.0",
    "numba>=0.60.0",
    "numpy>=1.26,<2.4",
    "openai>=2.16.0",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "python-dotenv>=1.1.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.2",
    "tqdm>=4.67.2",
    "typing-extensions>=4.15.0",
    "umap-learn>=0.5.7",
    "unidecode>=1.4.0",
    "zstandard>=0.25.0",
    "streamlit>=1.19.0",
    "langgraph>=1.0.10",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langchain-community>=0.4.1",
]
